--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body
 {
 	margin: 0;
 	padding: 10px;
+    height:113px;
 }
 #header #logo
 {
@@ -75,4 +76,69 @@ body
     padding-bottom:9px;
     background-color:#136286;
     border-radius: 5px 5px 0 0;
+}
+.left-menu
+{
+background-color:#006699 ;
+    border-radius: 0 0 5px 5px;
+}
+.left-menu-titles
+{
+    font-family: Verdana;
+    font-size:18px;
+    line-height: 22px;
+    color:#cccc33;
+    padding:8px 0 12px 17px;
+}
+.left-menu ul li a,.left-menu ul li a:visited,.left-menu ul li a:hover
+{
+    font-family: Verdana;
+    font-size:14px;
+    line-height: 28px;
+    color:#fff;
+    text-decoration: none;
+    padding-left: 17px;
+}
+.left-menu ul
+{
+    padding: 0;
+    padding-bottom: 10px;
+    margin: 0 4px;
+}
+.left-menu ul li
+{
+    width:100%;
+    list-style: none;
+    background: url("../img/left-memu-under.png") repeat-x bottom center;
+}
+.left-menu ul li.current
+{
+    background-color: #496a8e;
+}
+.start-footer-dec
+{
+    background: url('../img/start-footer-dec.png');
+    width:720px;
+    height:1px;
+    margin: 8px auto;
+}
+.start-footer
+{
+    text-align: center;
+    margin:54px 0 0 0 ;
+    padding: 0;
+}
+.start-footer li,.start-footer li a,.start-footer li a:visited,.start-footer li a:hover
+{
+    font-family: Verdana;
+    font-size: 14px;
+    line-height: 20px;
+    color:#fff;
+    text-decoration: none;
+    list-style:none;
+    display: inline;
+}
+.start-footer li.middle
+{
+    margin: 0 35px;
 }
